--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ MarkupSafe==1.0
 mistune==0.8.1
 nbconvert==5.3.1
 nbformat==4.4.0
+nose==1.3.7
 notebook==5.2.1
 pandocfilters==1.4.2
 pathlib2==2.3.0
